--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,13 @@
   "name": "redelive",
   "app_id": "a3faf44b",
   "type": "ionic-angular",
-  "integrations": {}
+  "integrations": {
+    "cordova": {}
+  },
+  "proxies": [
+    {
+        "path": "/*",
+        "proxyUrl": "https://maps.googleapis.com"
+    }
+  ]
 }
