--- a/package.json
+++ b/package.json
@@ -20,20 +20,85 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
+    "@ionic-native/camera": "^4.4.0",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/facebook": "^4.5.2",
+    "@ionic-native/file": "^4.4.0",
+    "@ionic-native/file-path": "^4.4.0",
+    "@ionic-native/file-transfer": "^4.4.0",
+    "@ionic-native/geolocation": "^4.3.3",
+    "@ionic-native/google-maps": "^4.4.2",
+    "@ionic-native/launch-navigator": "^4.4.2",
+    "@ionic-native/photo-viewer": "^4.5.3",
     "@ionic-native/splash-screen": "4.3.2",
-    "@ionic-native/status-bar": "4.3.2",
+    "@ionic-native/sqlite": "^4.5.2",
+    "@ionic-native/status-bar": "^4.3.2",
     "@ionic/pro": "1.0.11",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
+    "com-sarriaroman-photoviewer": "^1.1.11",
+    "cordova-android": "6.3.0",
+    "cordova-browser": "5.0.1",
+    "cordova-plugin-actionsheet": "^2.3.3",
+    "cordova-plugin-advanced-http": "^1.7.1",
+    "cordova-plugin-camera": "^2.4.1",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-dialogs": "^1.3.4",
+    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-file": "^4.3.3",
+    "cordova-plugin-file-transfer": "^1.6.3",
+    "cordova-plugin-filepath": "^1.1.0",
+    "cordova-plugin-geolocation": "^2.4.3",
+    "cordova-plugin-googlemaps": "^2.1.1",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.3.0",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-sqlite-storage": "^2.1.2",
     "ionic-angular": "3.8.0",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.1.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+      },
+      "cordova-plugin-advanced-http": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-statusbar": {},
+      "com-sarriaroman-photoviewer": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyCLkiFqMM18SU203d3umbqPUwTF1Jb9ooA",
+        "API_KEY_FOR_IOS": "AIzaSyApOhFId8D1I0ZS0CF-A21D8dqAQbqhN-k"
+      },
+      "cordova-sqlite-storage": {},
+      "uk.co.workingedge.phonegap.plugin.launchnavigator": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "1505918069504571",
+        "APP_NAME": "Redelive"
+      }
+    },
+    "platforms": [
+      "android",
+      "browser"
+    ]
+  }
 }
