--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "node-sass": "^4.7.2",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.1.0",
