--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "cordova-android": "6.3.0",
     "cordova-browser": "5.0.1",
     "cordova-plugin-actionsheet": "^2.3.3",
-    "cordova-plugin-advanced-http": "^1.7.1",
+    "cordova-plugin-advanced-http": "^1.11.0",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
@@ -58,6 +58,7 @@
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "js-yaml": "^3.11.0",
     "node-sass": "^4.7.2",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
