--- a/package.json
+++ b/package.json
@@ -20,26 +20,27 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
-    "@ionic-native/camera": "^4.5.3",
-    "@ionic-native/core": "4.5.3",
-    "@ionic-native/facebook": "^4.5.3",
-    "@ionic-native/file": "^4.5.3",
-    "@ionic-native/file-path": "^4.5.3",
-    "@ionic-native/file-transfer": "^4.5.3",
-    "@ionic-native/geolocation": "^4.5.3",
-    "@ionic-native/google-maps": "^4.5.3",
-    "@ionic-native/launch-navigator": "^4.5.3",
-    "@ionic-native/photo-viewer": "^4.5.3",
-    "@ionic-native/splash-screen": "4.5.3",
-    "@ionic-native/sqlite": "^4.5.3",
-    "@ionic-native/status-bar": "^4.5.3",
+    "@ionic-native/camera": "^4.6.0",
+    "@ionic-native/core": "4.6.0",
+    "@ionic-native/facebook": "^4.6.0",
+    "@ionic-native/file": "^4.6.0",
+    "@ionic-native/file-path": "^4.6.0",
+    "@ionic-native/file-transfer": "^4.6.0",
+    "@ionic-native/geolocation": "^4.6.0",
+    "@ionic-native/google-maps": "^4.6.1",
+    "@ionic-native/launch-navigator": "^4.6.0",
+    "@ionic-native/photo-viewer": "^4.6.0",
+    "@ionic-native/splash-screen": "4.6.0",
+    "@ionic-native/sqlite": "^4.6.0",
+    "@ionic-native/status-bar": "^4.6.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "^2.1.3",
     "com-sarriaroman-photoviewer": "^1.1.16",
+    "cordova": "8.0.0",
     "cordova-android": "7.1.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-actionsheet": "^2.3.3",
-    "cordova-plugin-advanced-http": "^1.11.0",
+    "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.1",
@@ -49,24 +50,25 @@
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-googlemaps": "^2.2.8",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-googlemaps": "^2.2.9",
+    "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.2.1",
+    "cordova-sqlite-storage": "^2.3.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "node-sass": "^4.8.2",
-    "rxjs": "5.5.7",
+    "node-sass": "^4.8.3",
+    "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
-    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.1.5",
-    "zone.js": "0.8.20"
+    "typescript-compiler": "^1.4.1",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.2.0",
+    "zone.js": "0.8.23"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
-    "typescript": "2.7.2"
+    "typescript": "^2.7.2"
   },
   "description": "An Ionic project",
   "cordova": {
