--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/google-maps": "^4.6.1",
     "@ionic-native/launch-navigator": "^4.6.0",
     "@ionic-native/photo-viewer": "^4.6.0",
+    "@ionic-native/screen-orientation": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/sqlite": "^4.6.0",
     "@ionic-native/status-bar": "^4.6.0",
@@ -52,10 +53,12 @@
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.2.9",
     "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.0",
+    "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -97,7 +100,8 @@
       "cordova-plugin-facebook4": {
         "APP_ID": "1505918069504571",
         "APP_NAME": "Redelive"
-      }
+      },
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android",
