--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
-    "@ionic-native/camera": "^4.6.0",
+    "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.7.0",
-    "@ionic-native/facebook": "^4.6.0",
-    "@ionic-native/file": "^4.6.0",
-    "@ionic-native/file-path": "^4.6.0",
-    "@ionic-native/file-transfer": "^4.6.0",
+    "@ionic-native/facebook": "^4.7.0",
+    "@ionic-native/file": "^4.7.0",
+    "@ionic-native/file-path": "^4.7.0",
+    "@ionic-native/file-transfer": "^4.7.0",
     "@ionic-native/geolocation": "^4.7.0",
-    "@ionic-native/google-maps": "^4.6.1",
-    "@ionic-native/launch-navigator": "^4.6.0",
-    "@ionic-native/photo-viewer": "^4.6.0",
+    "@ionic-native/google-maps": "^4.7.0",
+    "@ionic-native/launch-navigator": "^4.7.0",
+    "@ionic-native/photo-viewer": "^4.7.0",
+    "@ionic-native/screen-orientation": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
-    "@ionic-native/sqlite": "^4.6.0",
+    "@ionic-native/sqlite": "^4.7.0",
     "@ionic-native/status-bar": "^4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "^2.1.3",
@@ -41,21 +42,21 @@
     "cordova-browser": "5.0.3",
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-advanced-http": "^1.11.1",
-    "cordova-plugin-camera": "^4.0.2",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-dialogs": "^2.0.1",
-    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-facebook4": "^2.0.0",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.2.9",
-    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.3.0",
+    "cordova-sqlite-storage": "^2.3.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -67,8 +68,8 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.8",
-    "typescript": "^2.7.2"
+    "@ionic/app-scripts": "3.1.9",
+    "typescript": "^2.8.3"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -97,7 +98,8 @@
       "cordova-plugin-facebook4": {
         "APP_ID": "1505918069504571",
         "APP_NAME": "Redelive"
-      }
+      },
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android",
