--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "@ionic-native/launch-navigator": "^4.7.0",
     "@ionic-native/photo-viewer": "^4.7.0",
     "@ionic-native/screen-orientation": "^4.7.0",
-    "@ionic-native/splash-screen": "4.7.0",
+    "@ionic-native/splash-screen": "^4.7.0",
     "@ionic-native/sqlite": "^4.7.0",
     "@ionic-native/status-bar": "^4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "^2.1.3",
     "com-sarriaroman-photoviewer": "^1.1.16",
     "cordova": "8.0.0",
-    "cordova-android": "7.1.0",
+    "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -46,13 +46,13 @@
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-dialogs": "^2.0.1",
-    "cordova-plugin-facebook4": "^2.0.0",
+    "cordova-plugin-facebook4": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.2.9",
-    "cordova-plugin-ionic-webview": "^1.2.0",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -60,12 +60,13 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
     "typescript-compiler": "^1.4.1",
     "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.2.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "cordova-plugin-screen-orientation": "~3.0.1"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
@@ -102,8 +103,8 @@
       "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
-      "android",
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
