--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@ionic/storage": "^2.1.3",
     "com-sarriaroman-photoviewer": "^1.1.16",
     "cordova": "8.0.0",
-    "cordova-android": "7.0.0",
+    "cordova-android": "7.1.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -53,6 +53,7 @@
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.2.9",
     "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-screen-orientation": "~3.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -61,16 +62,16 @@
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "node-sass": "^4.9.0",
-    "rxjs": "5.5.10",
+    "npm-install-peers": "^1.2.1",
+    "rxjs": "^5.5.10",
     "sw-toolbox": "3.6.0",
     "typescript-compiler": "^1.4.1",
     "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.2.0",
-    "zone.js": "0.8.26",
-    "cordova-plugin-screen-orientation": "~3.0.1"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
-    "typescript": "^2.8.3"
+    "typescript": "^2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
