--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@ionic/storage": "^2.1.3",
     "com-sarriaroman-photoviewer": "^1.1.16",
     "cordova": "8.0.0",
-    "cordova-android": "7.1.0",
+    "cordova-android": "^7.0.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -46,7 +46,7 @@
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-dialogs": "^2.0.1",
-    "cordova-plugin-facebook4": "^2.0.1",
+    "cordova-plugin-facebook4": "^2.1.0",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.2.0",
@@ -71,7 +71,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
-    "typescript": "^2.6.2"
+    "typescript": "^2.8.3"
   },
   "description": "An Ionic project",
   "cordova": {
